--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,16 +7,24 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature android:name="android.hardware.location.gps" />
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+      <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
     
     <uses-sdk
         android:minSdkVersion="18"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="29" />
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:theme="@android:style/Theme.NoTitleBar"
         android:icon="@drawable/wtl" android:label="@string/app_name" >
         <activity
@@ -39,10 +47,16 @@
 		    <intent-filter>
 		        <action android:name="android.intent.action.VIEW" />
 		        <category android:name="android.intent.category.DEFAULT" />
+		        <action android:name="android.intent.action.MAIN" />
 		    </intent-filter>
 		</activity>
         <activity 
             android:name="com.wtl.TestSecondConnectActivity"></activity>
+        <activity
+            android:name="com.karics.library.zxing.android.CaptureActivity"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="portrait" >
+        </activity>
         <service android:name="com.wtl.service.BluetoothLeService" android:enabled="true"></service>
         <meta-data android:name="android.max_aspect" android:value="2.1" />
     </application>
